[tool.poetry]
name = "python-utils"
version = "0.1.0"
description = ""
authors = ["Gabriel Bossardi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.8"
psycopg = "^3.1.8"
pangres = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
